--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,6 +48,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('contact.contact')}}">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('main.notes')}}">Notes</a>
+                        </li>
                     </ul>
 
                     <!-- right links -->
